<resources>
    <string name="app_name">Tor Movies</string>
    <string name="hello_what_do_you_want_to_watch">Hello, what do you want to watch?</string>
    <string name="search">Search</string>
    <string name="description_movie_poster">Movies poster image</string>
    <string name="trending_movies">Trending movies</string>
    <string name="see_all">See all</string>
    <string name="most_recent">Most recent</string>
    <string name="download_now">Download now</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="duration">Duration</string>
    <string name="genre">Genre</string>
    <string name="release_year">Release year</string>
    <string name="not_available">Not available</string>
    <string name="duration_with_minutes">%s minutes</string>
    <string name="choose_quality">Choose quality</string>
    <string name="seed">Seed:</string>
    <string name="peer">Peer:</string>
    <string name="source">Source:</string>
    <string name="file_size">File size:</string>
    <string name="error">Error</string>
    <string name="error_opening_torrent_client">You don\'t appear to have a torrent client installed.\nPlease install Flud or any other client of your preference and try again.</string>
    <string name="ok">OK</string>
    <string name="error_query_no_result">No movies found</string>
    <string name="error_check_internet">Check your internet connection</string>
    <string name="ad_to_download">Ad:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="full_hd_rewarded_ad_id" translatable="false">ca-app-pub-8404166360433487/3698759942</string>
    <string name="watch_now">Watch now</string>
    <string name="preparing_stream">Preparing Stream</string>
    <string name="download_speed">Download speed: %s</string>
    <string name="downloading_torrent">Downloading torrent</string>
    <string name="preparing_torrent_download">Preparing torrent download</string>
    <string name="movie_player_not_found">Your device doesn\'t have a video player, please install one and try again</string>
    <string name="torrent_download_notification_channel">Torrent download notification channel</string>
    <string name="storage_permission_necessary_title">Storage permission necessary</string>
    <string name="storage_permission_necessary_message">The storage permission is necessary to download the torrent file and play it with a video player</string>
</resources>
