<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.details.DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgMoviePoster"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/cover_test" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMovieName"
                style="@style/MovieTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                tools:text="Aquaman" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/download_now"
                android:textSize="12sp"
                android:visibility="gone"
                app:cornerRadius="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMovieSynopsis"
                style="@style/MovieSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                tools:text="@string/lorem_ipsum" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="60dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MovieInfoLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/duration" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtMovieDuration"
                        style="@style/MovieSynopsis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        tools:text="120 minutes" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MovieInfoLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/genre" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtMovieGenres"
                        style="@style/MovieSynopsis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:lines="1"
                        tools:text="Action, Adventure, Fantasy" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MovieInfoLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/release_year" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtMovieReleaseYear"
                        style="@style/MovieSynopsis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        tools:text="2018" />
                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnYoutube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_play"
        app:backgroundTint="@color/youtubeRed"
        app:layout_anchor="@id/imgMoviePoster"
        app:layout_anchorGravity="bottom|right|end"
        app:tint='@android:color/white' />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnUp"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:src="@drawable/ic_up" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/detailBannerAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@color/colorPrimaryDark"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-8404166360433487/5433377972" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>